[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "engine"
path = "src/lib.rs"

[[bin]]
name = "export_assets"
path = "src/bin/export.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
googletest = "0.9.0"
itertools = "0.14.0"
libc = "0.2.174"
png = "0.17.16"
rust-libretro = {  version = "0.3.2", features = [ "unstable-env-commands" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiled = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = {  version = "0.3.23", features = ["json"] }
tracing-appender = "0.2.5"